made css changes to team page

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -368,6 +368,22 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "b1756776": {
+          "id": "b1756776",
+          "path": "css/team.css",
+          "output": "css/team-dist.css",
+          "name": "team.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
