--- a/prepros.cfg
+++ b/prepros.cfg
@@ -384,6 +384,22 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "e87c70f5": {
+          "id": "e87c70f5",
+          "path": "css/login.css",
+          "output": "css/login-dist.css",
+          "name": "login.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
