--- a/prepros.cfg
+++ b/prepros.cfg
@@ -244,38 +244,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "60a0ec63": {
-          "id": "60a0ec63",
-          "path": "js/xhr.js",
-          "output": "js/xhr-dist.js",
-          "name": "xhr.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "27ba0272": {
-          "id": "27ba0272",
-          "path": "js/components/user.js",
-          "output": "js/components/user-dist.js",
-          "name": "user.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "40fb40e6": {
           "id": "40fb40e6",
           "path": "startup_matchmaker/README.md",
@@ -369,6 +337,38 @@
           "height": 0,
           "width": 0
         },
+        "60a0ec63": {
+          "id": "60a0ec63",
+          "path": "js/xhr.js",
+          "output": "js/xhr-dist.js",
+          "name": "xhr.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "27ba0272": {
+          "id": "27ba0272",
+          "path": "js/components/user.js",
+          "output": "js/components/user-dist.js",
+          "name": "user.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "b1756776": {
           "id": "b1756776",
           "path": "css/team.css",
@@ -390,6 +390,22 @@
           "path": "css/login.css",
           "output": "css/login-dist.css",
           "name": "login.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "1294484c": {
+          "id": "1294484c",
+          "path": "css/base/splash.css",
+          "output": "css/base/splash-dist.css",
+          "name": "splash.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
